<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_index_view_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.IndexViewActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_layout_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_navigation_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gl_layout_horizontal">
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.475"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_status_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.94"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/font_small_medium"
                android:text="@string/tv_time_text"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:fontFamily="@font/sf_pro_text_regular"
                android:gravity="center_vertical|center_horizontal"
                app:layout_constraintTop_toTopOf="@id/gl_time_top"
                app:layout_constraintStart_toStartOf="@id/gl_time_left"
                app:layout_constraintEnd_toEndOf="@id/gl_time_right"
                app:layout_constraintBottom_toBottomOf="@id/gl_time_bottom" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_cellular"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/baseline_signal_cellular_alt_24"
                app:layout_constraintTop_toTopOf="@id/gl_icon_top"
                app:layout_constraintStart_toStartOf="@id/gl_cellular_left"
                app:layout_constraintEnd_toEndOf="@id/gl_cellular_right"
                app:layout_constraintBottom_toBottomOf="@id/gl_icon_bottom"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_wifi"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/baseline_wifi_24"
                app:layout_constraintTop_toTopOf="@id/gl_icon_top"
                app:layout_constraintStart_toStartOf="@id/gl_wifi_left"
                app:layout_constraintEnd_toEndOf="@id/gl_wifi_right"
                app:layout_constraintBottom_toBottomOf="@id/gl_icon_bottom"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_battery"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/baseline_battery_full_24"
                app:layout_constraintTop_toTopOf="@id/gl_icon_top"
                app:layout_constraintStart_toStartOf="@id/gl_battery_left"
                app:layout_constraintEnd_toEndOf="@id/gl_battery_right"
                app:layout_constraintBottom_toBottomOf="@id/gl_icon_bottom"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_search_field"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorTheme"
            app:layout_constraintTop_toTopOf="@id/gl_navigation_bar_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_search"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/sv_search_index_view_bg"
                android:elevation="2dp"
                android:focusable="false"
                app:iconifiedByDefault="false"
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.76"/>

                        <com.lmy.hwahae.ui.views.IndexViewCustomSpinner
                            android:id="@+id/sp_skin_type"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:spinnerMode="dialog"
                            android:background="@android:color/transparent"
                            app:layout_constraintTop_toTopOf="@id/gl_spinner_top"
                            app:layout_constraintStart_toStartOf="@id/gl_spinner_left"
...

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rv_product_index_view_bg"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/pb_loading_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:indeterminate="true"
                android:indeterminateTintMode="src_in"
                android:indeterminateTint="@android:color/darker_gray" />
...
