<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.020" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@id/gl_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_rectangle_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_rectangle_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_rectangle_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:background="@drawable/detail_view_header_border"
                app:layout_constraintStart_toStartOf="@id/gl_rectangle_left"
                app:layout_constraintEnd_toEndOf="@id/gl_rectangle_right"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/gl_rectangle_middle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_rectangle">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_cancel_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.02"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_cancel_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.085"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_cancel_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.845"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_cancel_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.965"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/baseline_cancel_24"
                app:layout_constraintTop_toTopOf="@id/gl_cancel_top"
                app:layout_constraintStart_toStartOf="@id/gl_cancel_left"
                app:layout_constraintEnd_toEndOf="@id/gl_cancel_right"
                app:layout_constraintBottom_toBottomOf="@id/gl_cancel_bottom"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_purchase_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.82"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_purchase_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.89"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_purchase_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.075"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_purchase_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.925"/>

            <Button
                android:id="@+id/btn_purchase"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/btn_purchase_text"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:fontFamily="@font/apple_sd_gothic_neo_bold"
                android:background="@drawable/btn_purchase_detail_view_bg"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@id/gl_purchase_top"
                app:layout_constraintStart_toStartOf="@id/gl_purchase_left"
                app:layout_constraintEnd_toEndOf="@id/gl_purchase_right"
                app:layout_constraintBottom_toBottomOf="@id/gl_purchase_bottom"/>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/sv_product"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/sv_product_detail_view_bg"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_product_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:scaleType="centerCrop"
                            android:layout_marginTop="@dimen/margin_large"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/padding_large"
                        android:paddingRight="@dimen/padding_large">

                        <TextView style="@style/TextAppearance.AppCompat.Large"
                            android:id="@+id/tv_product_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_extra_large"
                            android:textColor="@color/colorBlack"
                            android:fontFamily="@font/apple_sd_gothic_neo_bold"
                            android:lineSpacingExtra="@dimen/line_space_extra_small"
                            android:paddingTop="@dimen/padding_large"
                            android:paddingBottom="@dimen/padding_large"/>

                        <TextView style="@style/TextAppearance.AppCompat.Medium"
                            android:id="@+id/tv_product_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_medium_large"
                            android:textStyle="bold"
                            android:textColor="@color/colorTheme"
                            android:fontFamily="@font/sf_pro_text_bold"
                            android:lineSpacingMultiplier="1.20"
                            android:paddingBottom="@dimen/padding_large"/>

                        <TextView
                            android:id="@+id/tv_product_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_medium"
                            android:textColor="@color/colorBlack"
                            android:fontFamily="@font/noto_sans_ckr_bold"
                            android:lineSpacingExtra="@dimen/line_space_extra_medium"
                            android:background="@drawable/textline_border_top"
                            android:paddingTop="@dimen/padding_large" />

                        <FrameLayout
                            android:id="@+id/fl_product_bottom_margin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>